# arkad_OLD

./: Cargo.toml
.cargo/: config.toml  zig_wrapper_aarch64_linux_musl.sh
.devcontainer/: devcontainer.json  docker-compose.yaml
mesothes/: Cargo.toml
mesothes/src/: main.rs
scripts/: install_zig.sh
sec/: Cargo.toml
sec/src/: lib.rs  main.rs
sec/src/ingestion/: mod.rs  retrieval.rs  storage.rs
sec/src/ingestion/retrieval/: config.rs  mod.rs
sec/src/ingestion/storage/: config.rs  mod.rs
sec/src/parser/: mod.rs
