cargo-features = ["edition2024"] # TODO: DELETE after this is moved to stable Rust

[package]
name = "sec"
version = "0.1.0"
edition = "2024"



[lib]
name = "sec"
path = "src/lib.rs"

[[bin]]
name = "sec"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.12.4"
tokio = { version = "1", features = ["full"] }
